fix(cache): harden lettuce Redis cache and fix cluster-scope, stats, and codec bugs
Bug fixes in com.dotcms.cache.lettuce (RedisClient interface kept intact;
unused methods @Deprecated rather than removed):

- Cross-cluster cache wipe: RedisCache.remove(group)/removeAll() built
  "*PREFIX*" patterns without the cluster id, deleting other tenants' keys in
  a shared Redis space. deleteFromPattern now prepends keyPrefix() (consistent
  with scanKeys/keyCount), and callers pass un-anchored patterns.
- deleteFromPattern: replaced the Lua KEYS+DEL eval (blocking, errors on empty
  match, Lua-injectable) with SCAN + UNLINK. NOTE: remove(group)/removeAll()
  are now synchronous (matches Caffeine/H22 providers).
- delete(K...) used keyToStringConverter instead of wrapKey, so it never
  matched stored keys. Now wraps like deleteNonBlocking.
- Cache stats screen: RedisCache.getStats()/keyCount() could throw on a null
  pooled connection; CacheProviderAPIImpl.getStats() drops any provider whose
  getStats() throws, so the Redis region vanished from the screen. Made both
  exception-proof and added a CaffineCache-style empty-groups "n/a" fallback row.
- Pub/sub connection leak when the connection could not be opened; subscriber
  lists are now CopyOnWriteArrayList for safe concurrent subscribe/unsubscribe.
- unwrapKey / RedisCache.getKeys used global String.replace; now strip only the
  leading prefix.
- DotObjectCodec.decodeValue used bytes.array() (ignores position/limit/offset);
  now reads remaining() into a copy. Charset.forName -> StandardCharsets.UTF_8.
- sync set(k,v,ttl) now guards ttl == -1 (px(-1) is an invalid expire).
- RedisClientFactory de-duplicated; getDeclaredConstructor().newInstance();
  logs reflection failures instead of swallowing them.
- Removed duplicate removeKeysRaw and the dead getStats INFO/getRedisProperties
  block; NullLettuceClient returns safe non-null defaults.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>